<resources>
    <string name="app_name">SplitExpense</string>
    <string name="create">Create</string>
    <string name="group">Group</string>
    <string name="create_group">Create Group</string>
    <string name="group_name">Group Name</string>
    <string name="add_members">Add Members</string>
    <string name="currency">Currency</string>
    <string name="add_a_member">Add a member</string>
    <string name="members">Members</string>
    <string name="manage_group_members">Manage group members</string>
    <string name="group_members">Group Members</string>
    <string name="imports">Import</string>
    <string name="join_an_existing_group">Join an existing group</string>
    <string name="group_id">Group ID</string>
    <string name="group_id_ex_abcd9876">Group ID (Ex. ABCD9876 )</string>
    <string name="password_if_you_have">Password (If you have)</string>
    <string name="password">Password</string>
    <string name="the_group_id_is_available_in_the_share_screen_on_the_other_device">The group ID is available in the “Share” screen on the other device</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="my_list_folders">My List &amp; Folders</string>
    <string name="last_added">Last added on Feb 21,2024</string>
    <string name="total_amount">Total Amount</string>
    <string name="expense_paid_by">Expense paid by</string>
    <string name="amount_paid_by">Amount paid for</string>
    <string name="comment">Comment</string>
    <string name="add_a_comment">Add a comment...</string>
    <string name="show_my_dashboard">Show My Dashboard</string>
    <string name="create_new_group">Create New Group</string>
    <string name="import_group">Import Group</string>
    <string name="select_your_language">Select your language</string>
    <string name="my_list_amp_folders"><![CDATA[My List & Folders]]></string>
    <string name="date">Last added on Feb 21,2024</string>
    <string name="_6_transactions_6000_spent">%1$d transactions  •  ₹%2$d Spent</string>
    <string name="expense">Expense</string>
    <string name="_2000_00">₹2000.00</string>
    <string name="paid_by_on_18_feb_for_vipul_bhai">Paid by %1$s on 18 feb for %2$s</string>
    <string name="total">Total</string>
    <string name="_2000_give">₹ 2000\nGive</string>
    <string name="_6000_nbalance">₹ 6000\nBalance</string>
    <string name="per_person_balance_6000">Per Person Balance - ₹6000</string>
    <string name="person_name">Person Name</string>
    <string name="_6000_ngive">₹6000\nGive</string>
    <string name="_2000_ngot">₹2000\nGot</string>
    <string name="_1600_nbalance">₹1600\nBalance</string>
    <string name="_400_ng_bal">₹-400\nG.Bal</string>
    <string name="save">Save</string>
    <string name="_0_00">0.00</string>
    <string name="rupee_tag">₹</string>
    <string name="transfer">Transfer</string>
    <string name="income">Income</string>
    <string name="dummy">Dummy</string>
    <string name="dummy_rupee">₹ 2000</string>
    <string name="edit_splits">Edit Split</string>
    <string name="what_is_share">What is %1$s share?</string>
    <string name="fix_amount_for">Fixed amount for %1$s</string>
    <string name="ok">Ok</string>
    <string name="none">None</string>
    <string name="_1_2_share">1/2 Share</string>
    <string name="_1_share">1 Shares</string>
    <string name="_2_share">2 Shares</string>
    <string name="_3_share">3 Shares</string>
    <string name="_other_share">Other...</string>
    <string name="_fixed_share">Fixed amount</string>
    <string name="cancel">Cancel</string>
    <string name="notifications">Notifications</string>
    <string name="contact">Contact</string>
    <string name="share_the_app">Share the app</string>
    <string name="change_language">Change Language</string>
    <string name="appearance">Appearance</string>
    <string name="default_to_device_theme">Default to device theme</string>
    <string name="transactions_large">Transactions : Large</string>
    <string name="the_latest">The latest</string>
    <string name="about_sesterce">About Sesterce</string>
    <string name="need_help">Need help?</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="edit">Edit</string>
    <string name="duplicate">Duplicate</string>
    <string name="copy_withing_another_group">Copy withing another group</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="edit_group">Edit Group</string>
    <string name="share_group">Share Group</string>
    <string name="history">History</string>
    <string name="balance_details">Balance Details</string>
    <string name="setting">Setting</string>
    <string name="thailand">Thailand</string>
    <string name="operations">Operations</string>
    <string name="share_this_app">Share this app!</string>
    <string name="share">Share</string>
    <string name="invite_members">Invite members</string>
    <string name="each_member_will_be_able_to_ncheck_and_add_expenses">Each member will be able to\ncheck and add expenses.</string>
    <string name="bxfhhvruydf">BXFHHVRUYDF...</string>
    <string name="create_password">Create Password</string>
    <string name="by_share">By Share</string>
    <string name="fix_amount">Fix Amount</string>
    <string name="settled">Settled</string>
    <string name="please_check_your_internet_connection_and_try_again">Please check your internet connection\nand try again</string>
    <string name="try_again">Try Again</string>
    <string name="no_internet_connection">No internet connection</string>

</resources>