<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/_20sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_200sdp"
        android:orientation="vertical"
        android:background="@drawable/bg_radius_light"
        android:backgroundTint="@color/white"
        android:paddingHorizontal="@dimen/_18sdp"
        android:paddingVertical="@dimen/_22sdp">

        <TextView
            android:id="@+id/TvSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:fontFamily="@font/main_medium"
            android:text="@string/search"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toTopOf="@id/TvEditGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TvEditGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/main_medium"
            android:text="@string/edit_group"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toTopOf="@id/TvShareGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TvSearch" />

        <TextView
            android:id="@+id/TvShareGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/main_medium"
            android:text="@string/share_group"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toTopOf="@id/TvHistory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TvEditGroup" />

        <TextView
            android:id="@+id/TvHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/main_medium"
            android:text="@string/history"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toTopOf="@id/TvBalanceDetails"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TvShareGroup" />

        <TextView
            android:id="@+id/TvBalanceDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/main_medium"
            android:text="@string/balance_details"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TvHistory" />
    </LinearLayout>
</LinearLayout>