<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginHorizontal="@dimen/_15sdp"
    android:background="@drawable/ic_bottom_view"
    android:paddingHorizontal="@dimen/_15sdp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHeight_percent="0.45"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/TvQuestionName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/main_bold"
        android:gravity="center_vertical"
        android:text="@string/what_is_share"
        android:layout_alignParentTop="true"
        android:textColor="@color/main_color"
        android:layout_alignBottom="@id/TvDialogOk"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/TvDialogOk"
        app:layout_constraintEnd_toStartOf="@id/TvDialogOk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TvDialogOk"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/bg"
        android:fontFamily="@font/main_bold"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toEndOf="@id/TvQuestionName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.22" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_below="@id/TvDialogOk"
        app:layout_constraintTop_toBottomOf="@id/TvDialogOk">

        <TextView
            android:id="@+id/TvNone"
            android:layout_width="0dp"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg"
            android:backgroundTint="@color/main_color_tab"
            android:drawableStart="@drawable/ic_radio_small_selector"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/main_bold"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_15sdp"
            android:text="@string/none"
            android:textColor="@color/ic_selector_dialog"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/Tv12Share"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Tv12Share"
            android:layout_width="0dp"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg"
            android:backgroundTint="@color/main_color_tab"
            android:drawableStart="@drawable/ic_radio_small_selector"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/main_bold"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_15sdp"
            android:text="@string/_1_2_share"
            android:textColor="@color/ic_selector_dialog"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/TvNone"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Tv1Share"
            android:layout_width="0dp"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:layout_marginVertical="@dimen/_8sdp"
            android:background="@drawable/bg"
            android:backgroundTint="@color/main_color_tab"
            android:drawableStart="@drawable/ic_radio_small_selector"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/main_bold"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_15sdp"
            android:text="@string/_1_share"
            android:textColor="@color/ic_selector_dialog"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/Tv2Share"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TvNone" />

        <TextView
            android:id="@+id/Tv2Share"
            android:layout_width="0dp"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:layout_marginVertical="@dimen/_8sdp"
            android:background="@drawable/bg"
            android:backgroundTint="@color/main_color_tab"
            android:drawableStart="@drawable/ic_radio_small_selector"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/main_bold"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_15sdp"
            android:text="@string/_2_share"
            android:textColor="@color/ic_selector_dialog"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/Tv1Share"
            app:layout_constraintTop_toBottomOf="@id/Tv12Share" />

        <TextView
            android:id="@+id/Tv3Share"
            android:layout_width="0dp"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:layout_marginVertical="@dimen/_8sdp"
            android:background="@drawable/bg"
            android:backgroundTint="@color/main_color_tab"
            android:drawableStart="@drawable/ic_radio_small_selector"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/main_bold"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_15sdp"
            android:text="@string/_3_share"
            android:textColor="@color/ic_selector_dialog"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/TvOther"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Tv1Share" />

        <TextView
            android:id="@+id/TvOther"
            android:layout_width="0dp"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:layout_marginVertical="@dimen/_8sdp"
            android:background="@drawable/bg"
            android:backgroundTint="@color/main_color_tab"
            android:drawableStart="@drawable/ic_radio_small_selector"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/main_bold"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_15sdp"
            android:text="@string/_other_share"
            android:textColor="@color/ic_selector_dialog"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/Tv3Share"
            app:layout_constraintTop_toBottomOf="@id/Tv2Share" />

        <TextView
            android:id="@+id/TvFixed"
            android:layout_width="0dp"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:background="@drawable/bg"
            android:layout_marginTop="@dimen/_8sdp"
            android:backgroundTint="@color/main_color_tab"
            android:drawableStart="@drawable/ic_radio_small_selector"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/main_bold"
            android:gravity="center_vertical"
            android:paddingHorizontal="@dimen/_15sdp"
            android:text="@string/_fixed_share"
            android:textColor="@color/ic_selector_dialog"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TvOther" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />
    <!--    <androidx.constraintlayout.widget.ConstraintLayout-->
    <!--        android:id="@+id/ConsBlurView"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:layout_marginHorizontal="@dimen/_15sdp"-->
    <!--        android:background="@drawable/ic_bottom_view"-->
    <!--        android:paddingHorizontal="@dimen/_15sdp"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHeight_percent="0.45"-->
    <!--        app:layout_constraintStart_toStartOf="parent">-->

    <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
</RelativeLayout>