<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/_5sdp"
    android:background="@drawable/bg_radius_light"
    android:backgroundTint="@color/white"
    android:padding="@dimen/_10sdp"
    android:paddingHorizontal="@dimen/_15sdp">

    <ImageView
        android:id="@+id/IvMenu"
        android:layout_width="@dimen/_22sdp"
        android:layout_height="@dimen/_22sdp"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:padding="@dimen/_2sdp"
        android:src="@drawable/ic_verticle_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/TvGroupName" />

    <TextView
        android:id="@+id/TvRupee"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:fontFamily="@font/main_bold"
        android:gravity="end"
        android:text="@string/_2000_00"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/IvMenu" />

    <TextView
        android:id="@+id/TvGroupName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:fontFamily="@font/main_bold"
        android:gravity="bottom"
        android:text="@string/group_name"
        android:textColor="@color/main_color"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintEnd_toStartOf="@+id/IvMenu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TvCreateGroupName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_2sdp"
        android:fontFamily="@font/main_bold"
        android:gravity="end"
        android:text="@string/paid_by_on_18_feb_for_vipul_bhai"
        android:textColor="@color/black"
        android:textSize="@dimen/_10sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TvRupee" />
</androidx.constraintlayout.widget.ConstraintLayout>